# executable-trust-reference

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release-validation.yml
contracts/: executable-trust-v0.9.yaml  executable-trust-v1.0.yaml  reason-codes-v1.0.yaml
contracts/amendments/: README.md  example-amendment-v1.0-a1.yaml
docs/: architecture.md  governance-model.md  license-options.md  limitations.md  paper-to-code-traceability.md  production-reference-boundary.md  release-process.md  repository-scope.md  threat-model.md
evaluation/: golden_set.jsonl  run_baseline.py
examples/: run_reference_flow.py
reports/: reference-baseline.json  reference-baseline.md
schemas/: claim-verdict.schema.json  contract-amendment.schema.json  decision-record.schema.json  evaluation-case.schema.json  lifecycle-transition.schema.json  telemetry-event.schema.json  trust-contract.schema.json
scripts/: generate_evaluation_report.py  validate_contracts.py  validate_publication_boundary.py  validate_release_metadata.py  validate_traceability.py
src/executable_trust/: __init__.py  cli.py
src/executable_trust/amendments/: __init__.py  models.py  service.py
src/executable_trust/authorization/: __init__.py  deterministic.py  policy.py  protocol.py
src/executable_trust/contracts/: __init__.py  loader.py  models.py  registry.py  validation.py
src/executable_trust/decisions/: __init__.py  models.py  records.py  service.py  store.py
src/executable_trust/domain/: __init__.py  enums.py  errors.py  identifiers.py  models.py
src/executable_trust/evaluation/: __init__.py  models.py  reporting.py  runner.py
src/executable_trust/evidence/: __init__.py  gate.py  models.py
src/executable_trust/lifecycle/: __init__.py  history.py  models.py  state_machine.py
src/executable_trust/telemetry/: __init__.py  events.py  metrics.py  recorder.py  store.py
src/executable_trust/traceability/: __init__.py  validator.py
src/executable_trust/verification/: __init__.py  decision_function.py  deterministic.py  models.py  protocol.py  resilience.py
tests/: conftest.py  test_repository_invariants.py
tests/contract/: test_contract_artifacts.py
tests/integration/: test_governed_flow.py
tests/regression/: test_documented_failure_modes.py
tests/unit/: test_decision_function.py  test_gates_and_resilience.py  test_keyword_verifier.py  test_lifecycle_and_records.py  test_telemetry_and_metrics.py
